--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,3 +6,7 @@ backend:
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+
+# app/config/routing.yml
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
